# stock-indicator-noti

./: 01.SETTING.md  README.md  openapi_spec.yaml  package.json
fast_api_server/: openapi.yaml  setup.cfg
fast_api_server/.openapi-generator/: FILES
fast_api_server/src/openapi_server/: main.py
fast_api_server/src/openapi_server/apis/: indicator_calculation_api.py  indicator_calculation_api_base.py  indicator_management_api.py  indicator_management_api_base.py  ticker_management_api.py  ticker_management_api_base.py
fast_api_server/src/openapi_server/impl/: indicator_management_api.py  ticker_management_api.py
fast_api_server/src/openapi_server/models/: calculate_indicator_post200_response.py  calculate_indicator_post_request.py  indicator_input.py  indicator_output.py  indicators_list_get200_response.py  ticker_input.py  ticker_output.py  tickers_delete200_response.py  tickers_list_get200_response.py
fast_api_server/tests/: test_indicator_calculation_api.py  test_indicator_management_api.py  test_ticker_management_api.py
requirement/: api_spec.yaml  mysql_ddl.sql
